# image-qa

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements-dev.txt  requirements-lock.txt  requirements.txt
scripts/: setup_env.sh
