[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "carphotoqa-detector"
version = "0.1.0"
description = "Environment + tooling baseline for CarPhotoQA detector/segmenter pipeline"
readme = "README.md"
requires-python = ">=3.10,<3.14"
dependencies = [
  "numpy>=1.26,<3.0",
  "scipy>=1.11,<2.0",
  "pillow>=10.0,<12.0",
  "opencv-python>=4.9,<5.0",
  "pyyaml>=6.0,<7.0",
  "pydantic>=2.6,<3.0",
  "rich>=13.7,<15.0",
  "typer>=0.12,<1.0",
  "pycocotools>=2.0.7,<3.0",
  "torch>=2.4,<3.0",
  "torchvision>=0.19,<1.0",
  "ultralytics>=8.2,<9.0",
  "pandas>=2.2,<3.0",
  "scikit-learn>=1.5,<2.0",
  "matplotlib>=3.8,<4.0",
  "onnx>=1.16,<2.0",
  "onnxruntime-gpu>=1.18,<2.0; platform_system == 'Linux'",
  "wandb>=0.17,<1.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0,<9.0",
  "pytest-cov>=5.0,<6.0",
  "ruff>=0.6,<1.0",
  "pre-commit>=3.7,<5.0",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
